--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  padding: 20vh 5vw 0;
+  background-image: url('/assets/images/background.jpg');
+  background-size: 100% auto;
+  font-size: 15px;
+  font-family: 'Lato', sans-serif !important;
+}
